Sat Dec 14 00:18:01 GMT 2002  Olly Betts <olly@survex.com>

	* indexer/indexfile.cc,msearch.cc: Updated in line with removal
	  of OmSettings; set exit code if exception caught.

Sat Dec 07 21:25:59 GMT 2002  Olly Betts <olly@survex.com>

	* configure.in: Version 0.6.2.

Wed Dec 04 18:05:34 GMT 2002  Olly Betts <olly@survex.com>

	* copydatabase.cc,createdatabase.cc,delve.cc,msearch.cc,
	  simpleexpand.cc,simpleindex.cc,simplesearch.cc: Updated in line
	  with OmSettings related changes to the API.

Wed Nov 27 05:10:44 GMT 2002  Olly Betts <olly@survex.com>

	* simpleindex.cc: "const static ..." -> "static const ..."

Wed Nov 27 05:02:34 GMT 2002  Olly Betts <olly@survex.com>

	* configure.in: Updated version to 0.6.0; build with "-Wall -W" under
	  GCC (rather than -Wall -Wunused, which is a subset).

Tue Nov 12 00:41:42 GMT 2002  Olly Betts <olly@survex.com>

	* simpleindex.cc: Added MAX_PROB_TERM_LENGTH as in the omega
	  indexers - it's a good idea to exclude junk terms so the
	  example indexer probably should.

Wed Oct 30 02:12:37 GMT 2002  Olly Betts <olly@survex.com>

	* buildall: Removed in favour of bootstrap script.

Sat Oct 12 17:06:52 BST 2002  Olly Betts <olly@survex.com>

	* .cvsignore: Removed libtool.

Wed Oct 02 16:42:33 BST 2002  Olly Betts <olly@survex.com>

	* Makefile.am,configure.in: require automake 1.6.3 and autoconf 2.54
	  since xapian-core does anyway, and it neatens configure.in slightly.

Wed Oct 02 16:38:19 BST 2002  Olly Betts <olly@survex.com>

	* configure.in: Version 0.5.1.

Wed Oct 02 16:35:04 BST 2002  Olly Betts <olly@survex.com>

	* bootstrap: Added replacement for buildall.

Fri Sep 20 15:34:56 BST 2002  Olly Betts <olly@survex.com>

	* configure.in: Version 0.5.0.

Sun Aug 11 13:20:41 BST 2002  Richard Boulton <richard@tartarus.org>

	* delve.cc: Add -d option, to display document data for examined
	  documents..

Thu Jul 04 00:38:47 BST 2002  Olly Betts <olly@survex.com>

	* .cvsignore: updated.
